# verbatim-studio

./: .env.example  .gitignore  .prettierignore  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: docker-images.yml  release-desktop.yml
apps/desktop/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/dist-electron/: main.js  preload.js
apps/desktop/electron/: docker-manager.ts  main.ts  preload.ts
apps/desktop/resources/: docker-compose.yml
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src/components/: ExportDialog.tsx  SetupScreen.tsx
apps/desktop/src/components/layout/: AppLayout.tsx  AppSidebar.tsx  TitleBar.tsx
apps/desktop/src/hooks/: useTheme.ts
apps/desktop/src/lib/: api-client.ts
apps/desktop/src/pages/: Dashboard.tsx  Login.tsx  ProjectDetail.tsx  Projects.tsx  Recording.tsx  Settings.tsx  TranscriptViewer.tsx
apps/desktop/src/stores/: app-store.ts  auth-store.ts  project-store.ts  transcript-store.ts
apps/desktop/src/styles/: globals.css
apps/server/: .env.example  Dockerfile  README.md  pyproject.toml
apps/server/src/: __init__.py  config.py  main.py
apps/server/src/api/: auth.py  projects.py  recordings.py  transcripts.py  users.py
apps/server/src/database/: __init__.py  connection.py  models.py
apps/web/: index.html  package.json  tsconfig.json
apps/web/src/: App.tsx  main.tsx
apps/web/src/contexts/: AuthContext.tsx
apps/web/src/pages/: Dashboard.tsx  Login.tsx
docker/basic/: docker-compose.cpu.yml  docker-compose.yml
docker/enterprise/: .env.example  docker-compose.yml
docs/: IMPLEMENTATION_PLAN.md
docs/plans/: 2026-01-12-one-click-setup-design.md
scripts/: dev.sh  setup.sh
services/diarization/: Dockerfile  README.md  pyproject.toml
services/diarization/src/: __init__.py  config.py  diarizer.py  main.py  schemas.py
services/inflection-analysis/: Dockerfile  README.md  pyproject.toml
services/inflection-analysis/src/: __init__.py  config.py  emotion.py  main.py  prosody.py  schemas.py
services/whisper-live/: Dockerfile  README.md  pyproject.toml
services/whisper-live/src/: __init__.py  config.py  main.py  schemas.py  session.py  transcriber.py
services/whisper-service/: Dockerfile  Dockerfile.cpu  README.md  pyproject.toml
services/whisper-service/src/: __init__.py  config.py  jobs.py  main.py  schemas.py  transcriber.py
